[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/jugador.png" type="Texture" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 3 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "alive"
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "destroyed"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[node name="player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="laser_point" type="Position2D" parent="."]
position = Vector2( 0, -3 )

[node name="timer_shot" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "alive"
anims/RESET = SubResource( 2 )
anims/alive = SubResource( 4 )
anims/destroyed = SubResource( 3 )

[connection signal="timeout" from="timer_shot" to="." method="_on_shot_timer_timeout"]
